[package]
name = "egui_extras"
version.workspace = true
authors = [
  "Dominik Rössler <dominik@freshx.de>",
  "Emil Ernerfeldt <emil.ernerfeldt@gmail.com>",
  "René Rössler <rene@freshx.de>",
]
description = "Extra functionality and widgets for the egui GUI library"
edition.workspace = true
rust-version.workspace = true
homepage = "https://github.com/emilk/egui"
license.workspace = true
readme = "README.md"
repository = "https://github.com/emilk/egui"
categories = ["gui", "game-development"]
keywords = ["gui", "imgui", "immediate", "portable", "gamedev"]
include = ["../LICENSE-APACHE", "../LICENSE-MIT", "**/*.rs", "Cargo.toml"]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[lib]


[features]
default = []

## Add support for loading images with the [`image`](https://docs.rs/image) crate.
##
## You also need to ALSO opt-in to the image formats you want to support, like so:
## ```toml
## image = { version = "0.24", features = ["jpeg", "png"] } # Add the types you want support for

## ```
image = ["dep:image"]

## Support loading svg images.
svg = ["resvg"]

## Enable better syntax highlighting using [`syntect`](https://docs.rs/syntect).
syntect = ["dep:syntect"]


[dependencies]
egui = { workspace = true, default-features = false, features = ["serde"] }

hashbrown.workspace = true
enum-map = { version = "2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }

## Enable this when generating docs.
document-features = { workspace = true, optional = true }

image = { version = "0.24", optional = true, default-features = false }

syntect = { version = "5", optional = true, default-features = false, features = [
  "default-fancy",
] }

# svg feature
resvg = { version = "0.37", optional = true, default-features = false }
